<resources>
    <string name="app_name">WiFi Scanner</string>
    <string name="title_activity_maps">Map</string>
    <string name="start_service">Start Scanning Service</string>
    <string name="stop_service">Stop Scanning Service</string>
    <string name="map">Map</string>
    <string name="list">List</string>
    <string name="export_import">Export/Import</string>
    <string name="ssid">SSID</string>
    <string name="bssid">BSSID</string>
    <string name="level">Signal Level</string>
    <string name="timestamp">Time</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="description">Description</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="edit_wifi_point">Edit WiFi Point</string>
    <string name="add_wifi_point">Add WiFi Point</string>
    <string name="export_single">Export Single</string>
    <string name="export_all">Export All</string>
    <string name="import_data">Import Data</string>
</resources>